# emojicode-fcgi

./: CMakeLists.txt  default.nix
src/: fcgi.cpp  fcgi.emojic
